package han.triptop.groepB3.model;

public record LoginTokenDto(
        String token
) {
}
